fix: improve task layout
- Adjusted task widths to match the task-input-container.
- Set proper margins from the screen edges to prevent layout issues.

--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -15,24 +15,25 @@
   align-items: center;
   position: relative;
   .task-input-container {
-    max-width: 400px;
-    width: 100vw;
-    height: 70px;
+    max-width: 500px;
+    width: 90vw;
+    height: 70px; // Убедитесь, что эта высота достаточна
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     margin-top: 20px;
 
     .input-container {
-      max-width: 300px;
-      width: 100vw;
-      height: 70px;
+      flex-grow: 1; // Это свойство должно работать, если доступно пространство
+      min-width: 0; // Попробуйте добавить это свойство, чтобы избежать переполнения
+      width: calc(100% - 10px);
+      height: 70px; // Эта высота будет равной родителю
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      margin-right: 20px;
       .title-input {
-        max-width: 300px;
-        width: 100vw;
+        width: 100%;
         height: 30px;
         font-family: "Roboto";
         @include mixins.color();
@@ -47,8 +48,7 @@
       }
 
       .about-input {
-        max-width: 300px;
-        width: 100vw;
+        width: 100%;
         height: 30px;
         font-family: "Roboto";
         @include mixins.color();
@@ -62,6 +62,7 @@
       }
     }
     .add-button {
+      flex-shrink: 0;
       width: 70px;
       height: 70px;
       font-size: 50px;
@@ -109,14 +110,14 @@
   .task-element {
     display: flex;
     flex-direction: column;
+    width: 90vw;
+    max-width: 500px;
     .task-container {
-      max-width: 500px;
-      width: 100vw;
       padding: 10px;
       border-radius: 8px;
       @include mixins.color();
       box-sizing: border-box;
-      margin-top: 20px;
+      margin: 20px 0 0 0;
       display: flex;
       justify-content: space-between;
       align-items: center;
